samples/_failures_safe/1761287844_c3c2c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0fcf389.c: In function ‘main’:
./samples/SAFE/__tmp_c0fcf389.c:161:5: error: expected expression at end of input
  161 |     if (decompressed.size != input_len || memcmp(decompressed.data, input_str, input_len) !=
      |     ^~
./samples/SAFE/__tmp_c0fcf389.c:161:5: error: expected declaration or statement at end of input
